--- a/src/Sass/calendar.css
+++ b/src/Sass/calendar.css
@@ -99,6 +99,7 @@
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
     width: 15rem;
     margin-bottom: 20px;
+    font-size: 0.875rem;
 }
 
 
